# nfs-put

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.hpp  debug.hpp  default_vehicle_model.hpp  format.sh  lap_checkpoints.hpp  laps.cpp  laps.hpp  main.cpp  model.cpp  model.hpp  opponent.cpp  opponent.hpp  opponent_path.cpp  opponent_path.hpp  paths.json  physics.cpp  physics.hpp  physics_debug.cpp  physics_debug.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  skybox.hpp  vehicle.cpp  vehicle.hpp  vehicle_config.hpp  vehicle_manager.hpp
models/: spielberg.glb  wheel.glb
netcode/client/: CMakeLists.txt  client.cpp  client.hpp  opponent_manager.cpp  opponent_manager.hpp  opponent_vehicle_map.hpp  tcp_client.cpp  tcp_client.hpp  udp_client.cpp  udp_client.hpp
netcode/client/handlers/: client_connected_handler.hpp  client_disconnected_handler.hpp  laps_update_handler.hpp  lobby_client_list_handler.hpp  name_accepted_handler.hpp  name_taken_handler.hpp  opponent_states_handler.hpp  opponents_info_handler.hpp  position_response_handler.hpp  provide_name_handler.hpp  race_start_countdown_handler.hpp  start_game_handler.hpp  time_until_start_handler.hpp
netcode/server/: CMakeLists.txt  bsd_server.hpp  client_handle.hpp  client_manager.hpp  connection_manager.cpp  connection_manager.hpp  loop.cpp  loop.hpp  main.cpp  server.cpp  server_state.hpp  tcp_server.cpp  tcp_server.hpp  udp_server.cpp  udp_server.hpp
netcode/server/handlers/: client_game_loaded_handler.hpp  lap_count_handler.hpp  name_handler.hpp  position_handler.hpp  state_handler.hpp  udp_info_handler.hpp
netcode/shared/: DeserializationError.hpp  client_inputs.hpp  client_state.hpp  crc32.cpp  crc32.hpp  opponent_info.hpp  player_position.hpp  starting_positions.hpp
netcode/shared/packets/: packet.hpp  packet_header.hpp  position_packet.hpp
netcode/shared/packets/tcp/: tcp_packet.hpp  tcp_packet_header.hpp  tcp_packet_type.hpp
netcode/shared/packets/tcp/client/: client_game_loaded_packet.hpp  lap_count_packet.hpp  name_packet.hpp  udp_info_packet.hpp
netcode/shared/packets/tcp/server/: client_connected_packet.hpp  client_disconnected_packet.hpp  laps_update_packet.hpp  lobby_client_list_packet.hpp  name_accepted_packet.hpp  name_taken_packet.hpp  opponents_info_packet.hpp  provide_name_packet.hpp  race_start_countdown_packet.hpp  race_start_packet.hpp  start_game_packet.hpp  time_until_start_packet.hpp
netcode/shared/packets/udp/: packet_header.hpp  position_packet.hpp  udp_packet.hpp  udp_packet_header.hpp  udp_packet_type.hpp
netcode/shared/packets/udp/client/: ping_packet.hpp  position_packet.hpp  state_packet.hpp
netcode/shared/packets/udp/server/: opponent_positions_packet.hpp  opponent_states_packet.hpp
netcode/shared/utils/: byte_dump.hpp
shaders/: blur_frag.glsl  blur_vert.glsl  car_frag.glsl  car_vert.glsl  physicsdebug_frag.glsl  physicsdebug_vert.glsl  simplest_frag.glsl  simplest_vert.glsl  skybox_frag.glsl  skybox_vert.glsl  text_frag.glsl  text_vert.glsl  textured_frag.glsl  textured_vert.glsl  track_frag.glsl  track_vert.glsl
